2004-07-11  Kees Cook  <kees@outflux.net>

	* src/preferences-skeleton.h: with simarilius tracked down the cause
	  of bug #988445.  Hooked pref up to extension name #define.
	* src/dialogs/filedialog-win32.cpp: corrected an assert test, and
	  changed dialog to take the passed window title.

2004-07-11  Carl Hetherington  <inkscape@carlh.net>

	* src/attributes.cpp, src/attributes.h: remove confusing
	snaptogrid and snaptoguides options.

	* src/desktop-events.cpp: use inkscape:guide-bbox instead of
	snaptoguides to turn guides on.

	* src/desktop.cpp: no need to worry about Snapper::getEnabled().

	* src/snap.cpp, src/snap.h: Remove explicit enabled flag from
	Snapper, as itconfuses people.  Added
	namedview_dim_snap_all_types().  Return useful stuff from
	vector_snap_list.

	* src/rect-context.cpp: Use hack to make snapping kind of work
	even with snap-to-bbox enabled.

	* src/sp-namedview.cpp, src/dialogs/desktop-properties.cpp: remove
	snaptogrid and snaptoguides options as they confuse people.  Use
	better names for the scale origin radio buttons, as suggested by
	Bulia.

	* src/seltrans.cpp: Fix some cases where snap wasn't correctly applied.

2004-07-10  MenTaLguY  <mental@rydia.net>

	* src/sp-image.cpp: prospective fix for bug #979858

	* src/select-context.cpp, src/select-context.h,
	  src/seltrans.cpp, src/seltrans.h:

	  gave SPSelTrans its own Inkscape::MessageContext, fixing
	  bug #977971

2004-07-10  Kees Cook  <kees@outflux.net>

	* src/knot.cpp: solved bug #988513: knot could stay grabbed in
	  situations where the tool went away but never got "button_release"
	  event.  This patch uses the "enter" and "leave" notifiers to disable
	  the grab before a "motion" can come and snag the knot.

2004-07-09  Kees Cook  <kees@outflux.net>

	* src/widgets/paint-selector.cpp: solved bug #984902: the pattern
	  menu was being destroyed since it was remaining part of the frame
	  that was being destroyed whenever the selector changed.  It gets