@@ -2,7 +2,6 @@
 #define SEEN_PREFERENCES_SKELETON_H
 
 #include <inkscape_version.h>
-#include <extension/extension.h>
 
 static char const preferences_skeleton[] =
 "<inkscape version=\"" INKSCAPE_VERSION "\"\n"
@@ -127,7 +126,7 @@ static char const preferences_skeleton[] =
 "      <group id=\"exportarea\"/>\n"
 "      <group id=\"defaultxdpi\"/>\n"
 "    </group>\n"
-"    <group id=\"save_as\" default=\"" SP_MODULE_KEY_OUTPUT_SVG_INKSCAPE "\" append_extension=\"1\" path=\"\"/>\n"
+"    <group id=\"save_as\" default=\"\" append_extension=\"1\" path=\"\"/>\n"
 "    <group id=\"open\" path=\"\"/>\n"
 "  </group>\n"
 "  <group id=\"printing\">\n"
